fixed spacing

--- a/src/styles.css
+++ b/src/styles.css
@@ -1,19 +1,44 @@
-body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+.container {
   display: flex;
+  justify-content: center;
   align-items: center;
 }
 
-.LogoColor {
-  filter: invert(16%) sepia(13%) saturate(4656%) hue-rotate(121deg)
-    brightness(94%) contrast(97%);
+/*Hover animation*/
+a {
+  opacity: 1;
+  transition: opacity 0.25s ease-in-out;
+  -moz-transition: opacity 0.25s ease-in-out;
+  -webkit-transition: opacity 0.25s ease-in-out;
+}
+a:hover {
+  opacity: 0.7;
+}
+
+.dark-mode-toggle {
+  position: absolute;
+  top: 10%;
+  transform: translate(40rem, -70%);
+}
+
+.titleDiv {
+  position: absolute;
+  top: 35%;
+  transform: translate(0, -70%);
+}
+
+.icons {
+  position: absolute;
+  top: 55%;
+  transform: translate(0, -70%);
 }
 
 .Logo {
-  display: block;
-  margin-left: 25px;
-  margin-top: 25px;
+  position: absolute;
+  top: 10%;
+  transform: translate(-40rem, -70%);
+  filter: invert(16%) sepia(13%) saturate(4656%) hue-rotate(121deg)
+    brightness(94%) contrast(97%);
 }
 
 .Footer {
